--- a/Assignment 3.ipynb
+++ b/Assignment 3.ipynb
@@ -992,20 +992,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 234,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Citable docs per Capita</th>\n",
+       "      <th>Energy Supply per Capita</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Citable docs per Capita</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.794001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Energy Supply per Capita</th>\n",
+       "      <td>0.794001</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                          Citable docs per Capita  Energy Supply per Capita\n",
+       "Citable docs per Capita                  1.000000                  0.794001\n",
+       "Energy Supply per Capita                 0.794001                  1.000000"
+      ]
+     },
+     "execution_count": 234,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def answer_nine():\n",
     "    Top15 = answer_one()\n",
-    "    return \"ANSWER\""
+    "    Top15['PopEst'] = Top15['Energy Supply'] / Top15['Energy Supply per Capita']\n",
+    "    Top15['Citable docs per Capita'] = Top15['Citable documents'] / Top15['PopEst']\n",
+    "    return Top15[['Citable docs per Capita', 'Energy Supply per Capita']].corr(method = 'pearson')\n",
+    "answer_nine()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 226,
    "metadata": {
     "collapsed": true
    },
@@ -1023,11 +1075,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 227,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAZYAAAEKCAYAAAAxXHOuAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAIABJREFUeJzt3XucXVV99/HPd5JxEkmEMIlpSIKBh0sNNkQcEYptFYsi\nakBjMWoVLBZpqbdHS0CfR1G85nnUR2rBB6s2KsrFgESrUoggXhBMMBkIiEYuzcRI4hggA8k4yfn1\nj70GToa57Ez2PmfOme/79Tqv2Wfty/mtM0l+2WvttZYiAjMzs6K01DsAMzNrLk4sZmZWKCcWMzMr\nlBOLmZkVyonFzMwK5cRiZmaFcmIxM7NCObGYmVmhnFjMzKxQE+sdwL6YPn16zJs3r95hmJk1lDVr\n1vw+ImaUdf2GTizz5s1j9erV9Q7DzKyhSHqwzOu7KczMzArlxGJmZoUqLbFImiTpdknrJK2X9KFU\nfqCkGyT9Ov2cVnXOBZI2SLpX0svKis3MzMpT5h1LL3BiRBwNLAROlnQccD6wKiIOB1al90iaDywB\njgJOBi6RNKHE+MzMrASlJZbI9KS3rekVwKnA8lS+HDgtbZ8KXBERvRFxP7ABOLas+MzMrByl9rFI\nmiBpLbAFuCEibgNmRsTmdMjvgJlpezawser0rlQ28JpnS1otafXWrVtLjN7MxqPunl7WbXyY7p7e\neofSsEp93DgidgMLJR0AXCvpOQP2h6S9WsIyIi4DLgPo6Ojw8pdmVpjr1m5i6YpOWlta6KtUWLZ4\nAYsWPuX/tzaCmjwVFhEPAzeR9Z08JGkWQPq5JR22CZhbddqcVGZmVrrunl6WruhkZ1+F7b272NlX\n4bwVnb5zGYUynwqbke5UkDQZOAn4JbASOCMddgZwXdpeCSyR1CbpEOBw4Pay4jMzq9a1bQetLXv+\nk9ja0kLXth11iqhxldkUNgtYnp7sagGuiojvSLoVuErSWcCDwOkAEbFe0lXA3cAu4NzUlGZmVro5\n0ybTV6nsUdZXqTBn2uQ6RdS4FNG43RQdHR3hKV3MrCgr127ivHHQxyJpTUR0lHX9hp4rzMysSIsW\nzuaEw6bTtW0Hc6ZNpn1KW71DakhOLGZmVdqntDmh7CPPFWZWMI+DsPHOdyxmBfI4CDPfsZgVxuMg\nzDJOLGYF8TgIs4wTi1lBPA7CLOPEYlaQ9iltLFu8gEmtLUxtm8ik1haWLV7gJ4xs3HHnvVmBPA7C\nzInFrHAeB2HjnZvCzMysUE4sZmZWKCcWMzMrlBOLmZkVyonFzMwK5cRiZmaFcmIxM7NCObGYmVmh\nnFjMzKxQTixmZlYoJxYzMyuUE4uZmRXKicXMzArlxGJmZoVyYjEzs0I5sZiZWaGcWMzMrFClJRZJ\ncyXdJOluSeslvTOVXyhpk6S16XVK1TkXSNog6V5JLysrNjMzK0+ZSxPvAt4TEXdImgqskXRD2veZ\niPi/1QdLmg8sAY4CDgJulHREROwuMUYzMytYaXcsEbE5Iu5I29uBe4DZw5xyKnBFRPRGxP3ABuDY\nsuIzM7Ny1KSPRdI84LnAbano7ZI6JX1J0rRUNhvYWHVaF8MnIjMzG4NKTyySpgArgHdFxKPApcCh\nwEJgM/Cpvbze2ZJWS1q9devWwuM1M7N9U2pikdRKllQuj4hrACLioYjYHREV4As82dy1CZhbdfqc\nVLaHiLgsIjoiomPGjBllhm9mZqNQ5lNhAr4I3BMRn64qn1V12KuBu9L2SmCJpDZJhwCHA7eXFZ+Z\nmZUj91Nhkp4JTOp/HxH/NcIpJwBvAu6UtDaVvQ94vaSFQAAPAG9L11sv6SrgbrInys71E2FmZo1n\nxMQiaRFZP8hBwBbgWWRPeB013HkR8WNAg+z67jDnfBT46EgxmZnZ2JWnKewi4DjgVxFxCPAS4Gel\nRmVmZg0rT2Lpi4huoEVSS0TcBHSUHJeZmTWoPH0sD6dHhm8BLpe0BXis3LDMzKxR5bljORV4HHg3\n8H3gN8ArywzKzMwaV57E8oGIqETErohYHhEXA0vLDszMzBpTnsRy0iBlLy86EDMzaw5D9rFI+gfg\nH4FDJXVW7ZoK/KTswMysXN09vXRt28GcaZNpn9JW73CsiQzXef914HvAx4Hzq8q3R8QfSo3KzEp1\n3dpNLF3RSWtLC32VCssWL2DRQs/5asUYriksIuIB4Fxge9ULSQeWH5qZlaG7p5elKzrZ2Vdhe+8u\ndvZVOG9FJ909vfUOzZrESHcsrwTWkE2/Uj2KPshmKDazBtO1bQetLS3spPJEWWtLC13bdrhJzAox\nZGKJiFemn4fULhwzK9ucaZPpq1T2KOurVJgzbXKdIrJmk2t2Y0mvkfRpSZ+SdFrZQZlZedqntLFs\n8QImtbYwtW0ik1pbWLZ4ge9WrDB5JqG8BDgM+EYqOkfSSRFxbqmRmVlpFi2czQmHTfdTYVaKPFO6\nnAg8OyICQNJyYH2pUZmNkh+hza99Spu/IytFnsSyATgYeDC9n5vKzMYUP0JrNjbk6WOZCtwj6WZJ\nN5EtxPUMSSslrSw3PLN8/Ait2diR547lA6VHYbaP/Ait2dgxYmKJiB/WIhCzfeFHaM3GjhGbwiQd\nJ+nnknok/VHSbkmP1iI4G53unl7WbXx4XDUD+RFas7EjT1PY54AlwNVkK0e+GTiizKBs9MZzB7Yf\noTUbG3INkIyIDcCEiNgdEV8GTi43LBsNd2Bndy5Hzz3AScWsjvLcsTwu6WnAWknLgM3kTEhWW+7A\nNrOxIE+CeFM67p/I1rqfCywuMygbHXdgm9lYMGRikTRD0vyIeDAidkbEoxHxIeCLwCO1C9Hycge2\nmY0FwzWF/QtwySDlBwLvB95QSkS2T9yBbWb1NlxiOSwibhlYGBE/knRpiTHZPvIcUGZWT8P1sUwd\nZl9r0YGYmVlzGC6xbJB0ysBCSS8H7isvJDMza2TDNYW9C/gPSaeTLU8M2QDJ48mWLB6WpLnAV4CZ\nZEsZXxYRn5V0IHAlMA94ADg9Iralcy4AzgJ2A++IiOtHUSczM6ujIe9YIuLXwJ8BPyRLAvPS9oKI\n+FWOa+8C3hMR84HjgHMlzQfOB1ZFxOHAqvSetG8JcBTZAMxLJE0YXbXMzKxehh0gGRG9wJdHc+GI\n2Ew2mJKI2C7pHmA2cCrwonTYcuBmYGkqvyJ95v2SNgDHAreO5vPNzKw+ajKCXtI84LnAbcDMlHQA\nfkfWVAZZ0tlYdVpXKjMzswZSemKRNAVYAbwrIvaYFTktdxx7eb2zJa2WtHrr1q0FRmpmZkUYNrFI\nmiDp8tFeXFIrWVK5PCKuScUPSZqV9s8CtqTyTWTTxfSbk8r2EBGXRURHRHTMmDFjtKGZmVlJhk0s\nEbEbeFaahHKvSBLZ9C/3RMSnq3atBM5I22cA11WVL5HUJukQ4HDg9r39XDMzq688sxvfB/wkrW//\nWH/hgGQxmBPIJrC8U9LaVPY+4BPAVZLOAh4ETk/XWy/pKuBusifKzk2JzczMGkiexPKb9Gph+NH4\ne4iIHwMaYvdLhjjno8BH836GmZmNPXnWvP8QgKSnR8Tj5YdkZmaNLM+a98dLuhv4ZXp/tKTBZj02\nMzPL9bjx/wNeBnQDRMQ64C/LDMrMzBpX3jXvNw4ocqe6mZkNKk/n/UZJfw5EGpfyTuCecsMyM7NG\nleeO5RzgXLLpVX4LLEzvzczMniLPU2G/B95Yg1jMzKwJ5Hkq7FBJ35a0VdIWSddJOrQWwZmZWePJ\n0xT2deAqYBZwEHA18I0ygzIzs8aVJ7E8PSK+GhG70utrwKSyAzMzs8aU56mw70k6H7iCbIr71wHf\nTUsMExF/KDE+MzNrMHkSy+np59sGlC8hSzTubzEzsyfkeSrskFoEYmZmzaEmSxObmdn44cRiZmaF\ncmIxM7NC5RkgeY2kV0hyErLCdff0sm7jw3T39NY7FDMrSJ6nwi4B3gJcLOlq4MsRcW+5Ydl4cN3a\nTSxd0UlrSwt9lQr/+xXzec7s/ZkzbTLtU9rqHZ6ZjVKep8JuBG6UtD/w+rS9EfgC8LWI6Cs5RmtC\n3T29LF3Ryc6+CjupAPD+b93FlLYJ7KoEyxYvYNHC2XWO0sxGI1fzlqR24EzgrcAvgM8CxwA3lBaZ\nNbWubTtobXnqH7+e3t3s7Ktw3opON4+ZNagR71gkXQscCXwVeFVEbE67rpS0uszgrHnNmTaZvkpl\nyP2tLS10bdvhJjGzBpTnjuXiiJgfER+vSioARERHSXFZk2uf0sayxQuY1NrCfk+b8JT9fZUKc6ZN\nrkNkZravhrxjkfSawbb7RcQ1ZQVl48OihbM54bDpdG3bwV2/fYSLvnP3Ex35yxYv8N2KWYMarins\nVcPsC8CJxfZZ+5Q22qe0cfTcAzj5qD+ha9sOPxVm1uCGTCwR8ZZaBmLWn2TMrLHlGSDZLuliSXdI\nWiPps+kpMTMzs6fI03l/BbAVWAy8Nm1fWWZQZmbWuPIkllkRcVFE3J9eHwFmjnSSpC9J2iLprqqy\nCyVtkrQ2vU6p2neBpA2S7pX0stFVx8zM6i1PYvlPSUsktaTX6cD1Oc77d+DkQco/ExEL0+u7AJLm\nky0cdlQ65xJJT30G1czMxrw8ieXvga8Df0yvK4C3Sdou6dGhToqIW4C8yxafClwREb0RcT+wATg2\n57lmgCe0NBsr8swVNrXgz3y7pDcDq4H3RMQ2YDbws6pjulKZWS4DJ7T0XGNm9ZN3rrDXSPq0pE9J\nOm0fPu9S4FBgIbAZ+NTeXkDS2ZJWS1q9devWfQjFmkX1hJbbe3d5rjGzOsvzuPElwDnAncBdwDmS\n/nU0HxYRD0XE7oiokM2O3N/ctQmYW3XonFQ22DUui4iOiOiYMWPGaMKwJjPYhJb9c42ZWe3lWY/l\nRODZEREAkpYD60fzYZJmVc039mqyRAWwEvi6pE8DBwGHA7eP5jNs/BlsQkvPNWZWP3mawjYAB1e9\nn5vKhiXpG8CtwJGSuiSdBSyTdKekTuDFwLsBImI9cBVwN/B94NyI2L1XNbFxq3pCy6ltE5nU2uK5\nxszqSOlGZOgDpB8Czye7gwiy5qvVwCMAEbGo5BiH1NHREatXe+Z+y3T39HquMbMcJK0pc3b6PE1h\nHyjrw82K5LnGzMaGPI8b/7AWgZiZWXPIs4LkdrImMICnAa3AYxHxjDIDMzOzxrRXAyQliWyU/HFl\nBmVmZo0r1wDJfpH5FuBJIs3MbFB5msKqlyVuATqAnaVFZGZmDS3PU2HVSxTvAh4gaw4zMzN7ijx9\nLF6i2MzMchuyj0XS30s6PG0rLdz1iKROScfULkQzM2skw3Xev5Os2Qvg9cDRZDMT/0/gs+WGZWZm\njWq4xLIrIvrS9iuBr0REd0TcCOxXfmhmZtaIhkssFUmzJE0CXgLcWLXP08aaFcCrXlozGq7z/gNk\nk01OAFamGYiR9FfAfTWIzaypedVLa1ZDJpaI+I6kZwFT0/LB/VYDrys9MrMmVr3q5U6ytWTOW9HJ\nCYdN90Sa1vCGHXkfEbsGJBUi4rGI6Ck3LLPm5lUvrZnt1ZQuNna4bb6xedVLa2Z5Rt7bGOO2+cbX\nv+rleQN+j24Gs2aQZ66wa4AvAt+LiMpIx1u53DbfPBYtnM0Jh033qpfWdPI0hV0CvAH4taRPSDqy\n5JhsGG6bby7tU9o4eu4BTirWVEZMLBFxY0S8ETiGbCT+jZJ+KuktklrLDtD25LZ5MxvrcnXeS2oH\nzgTeCvyCbEqXY4AbSovMBtXfNj+ptYWpbROZ1NritnkzG1Py9LFcCxwJfBV4VURsTruulLS6zOBs\ncG6bN7OxLM9TYRdHxE2D7YiIjoLjsZzap7SNuYTS3dPrZGdmuRLLtAGrSAI8AtwZEVtKiMkakB+B\nNrN+eRLLWcDxQP9dy4uANcAhkj4cEV8tKTZrEKN5BNp3N2bNK09iaQWeHREPAUiaCXwFeAFwC1nf\ni41j/Y9A9ycVePIR6MGShu9uzJpbnqfC5vQnlWQLMDci/gD0DXGOjSN78wh09d3N9t5d7OyrcN6K\nTk9NY9ZE8iSWmyV9R9IZks4Arktl+wEPlxueNYK9eQTaAzzNml+eprBzgdcAL0zvvwKsiIgAXjzU\nSZK+RLby5JaIeE4qOxC4EphHNtjy9P7ZkyVdQNafsxt4R0RcP4r6WJ3kfQTaAzzNmt+wdyySJgA/\niIgVEfHu9PpmSioj+Xfg5AFl5wOrIuJwYFV6j6T5wBLgqHTOJemzrYHkmZ7EAzzNmt+wdywRsVtS\nRdL+EfHI3lw4Im6RNG9A8alkT5UBLAduBpam8isiohe4X9IG4Fjg1r35TGsMHuBp1tzyNIX1AHdK\nugF4rL8wIt4xis+bWTVy/3fAzLQ9G/hZ1XFdqcya1Fgc4GlmxciTWK5Jr0JFREjK06S2B0lnA2cD\nHHzwwUWHZWZm+2jExBIRyyVNBg6OiHv38fMekjQrIjZLmkX26DLAJmBu1XFzUtlg8VwGXAbQ0dGx\n14nJzMzKNeLjxpJeBawFvp/eL5S0cpSftxI4I233P7rcX75EUpukQ4DDgdtH+RkNyUsNm1mzyNMU\ndiFZR/rNABGxVtKhI50k6RtkHfXTJXUBHwQ+AVwl6SzgQeD0dM31kq4C7gZ2AedGxO69rUyj8kh0\nM2smeRJLX0Q8Iqm6bMQliiPi9UPseskQx38U+GiOeJqKlxo2s2aTZ+T9eklvACZIOlzSvwA/LTmu\nccMj0c2s2eRJLG8nG7jYC3wDeBR4V5lBjSceiW5mzSbPmvePR8T7I+L5EdGRtnfWIrjxwCPRzazZ\n5Fma+AjgvWTzez1xfEScWF5Y44tHoptZM8nTeX818Hng38gmiLQSeCS6mTWLPIllV0RcWnokZmbW\nFPJ03n9b0j9KmiXpwP5X6ZGZmVlDynPH0j9S/p+rygIYcZCkmZmNP3nmCjukFoGYmVlzGLIpTNJ5\nVdt/M2Dfx8oMyszMGtdwfSxLqrYvGLBv4MqQZmZmwPCJRUNsD/bezMwMGD6xxBDbg703MzMDhu+8\nP1rSo2R3J5PTNun9pNIjMzOzhjRkYomICbUMxMzMmkOeAZJmZma5ObGYmVmhnFjMzKxQTixmZlYo\nJxYzMyuUE4uZmRXKicXMzArlxDKE7p5e1m18mO6e3nqHYmbWUPKsxzLuXLd2E0tXdNLa0kJfpcKy\nxQtYtHB2vcMyM2sIvmMZoLunl6UrOtnZV2F77y529lU4b0Wn71zMzHJyYhmga9sOWlv2/FpaW1ro\n2rajThGZmTUWJ5YB5kybTF+lskdZX6XCnGmT6xSRmVljcWIZoH1KG8sWL2BSawtT2yYyqbWFZYsX\n0D6lrd6hmZk1hLp03kt6ANgO7AZ2RUSHpAOBK4F5wAPA6RGxrR7xLVo4mxMOm07Xth3MmTbZScXM\nbC/U847lxRGxMCI60vvzgVURcTiwKr2vm/YpbRw99wAnFTOzvTSWmsJOBZan7eXAaXWMxczMRqle\niSWAGyWtkXR2KpsZEZvT9u+AmYOdKOlsSaslrd66dWstYjUzs71QrwGSL4yITZKeCdwg6ZfVOyMi\nJMVgJ0bEZcBlAB0dHYMeY2Zm9VOXO5aI2JR+bgGuBY4FHpI0CyD93FKP2MzMbN/UPLFI2k/S1P5t\n4KXAXcBK4Ix02BnAdbWOzczM9l09msJmAtdK6v/8r0fE9yX9HLhK0lnAg8DpdYjNzMz2Uc0TS0Tc\nBxw9SHk38JJax2NmZsUaS48bm5lZE3BiMTOzQjmxmJlZoZxYzMysUE4sZmZWKCcWMzMrlBOLmZkV\nyonFzMwK5cRiZmaFasrE0t3Ty7qND9Pd01vvUMzMxp16TZtfmuvWbmLpik5aW1roq1RYtngBixbO\nrndYZmbjRlPdsXT39LJ0RSc7+yps793Fzr4K563o9J2LmVkNNVVi6dq2g9aWPavU2tJC17YddYrI\nzGz8aarEMmfaZPoqlT3K+ioV5kybXKeIzMzGn6ZKLO1T2li2eAGTWluY2jaRSa0tLFu8gPYpbfUO\nzcxs3Gi6zvtFC2dzwmHT6dq2gznTJjupmJnVWNMlFsjuXJxQzMzqo6mawszMrP6cWMzMrFBOLGZm\nVignFjMzK5QTi5mZFUoRUe8YRk3SduDeesdRounA7+sdRIlcv8bWzPVr5roBHBkRU8u6eKM/bnxv\nRHTUO4iySFrt+jUu169xNXPdIKtfmdd3U5iZmRXKicXMzArV6InlsnoHUDLXr7G5fo2rmesGJdev\noTvvzcxs7Gn0OxYzMxtj6ppYJJ0s6V5JGySdP8h+Sbo47e+UdMxI50o6UNINkn6dfk6r2ndBOv5e\nSS9rpvpJapd0k6QeSZ8ru251qN9JktZIujP9PLHJ6nespLXptU7Sq5upflX7D05/Rt/bLHWTNE/S\njqrf3+fLrFut65f2LZB0q6T16e/gpGEDjIi6vIAJwG+AQ4GnAeuA+QOOOQX4HiDgOOC2kc4FlgHn\np+3zgU+m7fnpuDbgkHT+hCaq337AC4FzgM814e/vucBBafs5wKYmq9/TgYlpexawpf99M9Sv6prf\nBK4G3tssdQPmAXeV/XeujvWbCHQCR6f37Yzwb2c971iOBTZExH0R8UfgCuDUAcecCnwlMj8DDpA0\na4RzTwWWp+3lwGlV5VdERG9E3A9sSNcpS03rFxGPRcSPgZ0l1qlarev3i4j4bSpfD0yWVObaCLWu\n3+MRsSuVTwLK7vys9d8/JJ0G3E/2+ytTzetWY7Wu30uBzohYBxAR3RGxe7gA65lYZgMbq953pbI8\nxwx37syI2Jy2fwfM3IvPK1Kt61dr9azfYuCOiOgdXei51Lx+kl4gaT1wJ3BOVaIpQ03rJ2kKsBT4\nUBHBj6AefzYPSc1gP5T0F/sY/0hqXb8jgJB0vaQ7JJ03UoCNPvJ+WBERkpr2sbfxWD9JRwGfJPtf\nVEMbWL+IuA04StKzgeWSvhcRtboDLdyA+l0IfCYieiTVMapiDKjbZuDgiOiW9DzgW5KOiohH6xji\nPhlQv4lkzezPBx4HVklaExGrhjq/nncsm4C5Ve/npLI8xwx37kPplo/0c8tefF6Ral2/Wqt5/STN\nAa4F3hwRvymgDsOp2+8vIu4Besj6kspS6/q9AFgm6QHgXcD7JP3TvldjUDWtW2pe707ba8j6MI4o\npCaDq/Xvrgu4JSJ+HxGPA98FjmE4w3XAlPkiy4L3kXWk93ciHTXgmFewZwfU7SOdC/wf9uyAWpa2\nj2LPzvv7KLfzvqb1q7rmmdSm877Wv78D0nGvadI/n4fwZOf9s4DfAtObpX4Drnsh5Xbe1/p3N4P0\nbwlZp/gm4MAmqt804A7SAybAjcArho2xrMrn/IJOAX5FluHfn8rOIWtfJn0p/5r23wl0DHduKm8H\nVgG/Tl/AgVX73p+Ovxd4eRPW7wHgD2T/2+1iwJMijVw/4H8BjwFrq17PbKL6vYmsU3tt+kt8WrP9\n+aw65kJKTCx1+N0tHvC7e1Wz/e6Av011vItB/rMw8OWR92ZmViiPvDczs0I5sZiZWaGcWMzMrFBO\nLGZmVignFjMzK5QTi9WFpD+RdIWk3yibrfi7ko6QdJCkb6ZjFko6Jce1ztQQMzpL6tmHGIe87lgz\n1Pc5ymv9m6T5aft9xUZq44ETi9Wcsjk9rgVujoj/ERHPAy4gm6votxHx2nToQrJn7q2KpIkD3g/5\nfY7m+hHx1oi4O711YrG95sRi9fBioC8inli3IiLWRcSP0toWd0l6GvBh4HVpcr/XKVuz5FZJv5D0\nU0lHVl1zrqSb01oSHxzsQyX9s6Sfp/UpBp0MUdJbJP1K0u3ACVXl8yT9IJ27StLBqXympGuVraGy\nTtKfS9pP0n+k93dJet0gn3OzpM+mut0l6dhUvp+kL0m6PdXz1FR+pqSVkn5ANogt7/c5JcV7h7J1\nNPqvN0/SLyVdLukeSd+U9PSq2DokfYJsFum1ki5P+76V7ojWSzp70N+uWdkjRP3ya+ALeAfZhISD\n7ZtHWtuCAdPTAM/gyWlP/hpYUXXcZrKRw5PJRgd3pH096edLydb5Ftl/qL4D/OWAz54F/BfZFB1P\nA37S//nAt4Ez0vbfAd9K21cC70rbE4D9yUZif6HquvsPUs+b+48B/rKqzh8D/jZtH0A2Qnq/VMcu\nBh/JPtz3ORF4RtqeTrZchNL3HMAJad+XSKPhU2x7fH9V1+sfbd7/PbfX+8+TX2Pv5TsWayT7A1dL\nugv4DNn8b/1uiGydiB3ANWSzsVZ7aXr9gmzajT8FDh9wzAvImpO2RrZWxZVV+44Hvp62v1p1/ROB\nSwEiYndEPEI2hcZJkj4p6S9S2WC+kc67BXiGpANSjOdLWkv2D/wk4OCqOv5hiGsNRcDHJHWSTdMx\nmyebyDZGxE/S9td46nc2mHdIWgf8jGwyw4HfoVlzT5tvY9Z64LUjHvVUFwE3RcSrJc0j+4e338C5\niQa+F/DxiPj/o/jcvRIRv1K2FOwpwEckrYqIDw926CDvBSyOiHurd0h6AdlcaYMZ7vt8I9kd2PMi\noi/NLty/rOxI39keJL2I7E7x+Ih4XNLNVdcye4LvWKwefgC0VbfRK1tTe+ACSduBqVXv9+fJKb7P\nHHDsScrW7J5MtvLdTwbsvx74O2ULTiFptqRnDjjmNuCvJLVLagX+pmrfT4ElafuNwI/S9irgH9I1\nJ0jaX9JBwOMR8TWyGWOHmmL8dem8FwKPpDub64G3pw55JD13iHOrDfd97g9sSUnlxWQzJ/c7WNLx\nafsNwI8HuXZf+i5I19qWksqfks2aa/YUTixWcxERwKuBv06Px64HPk62al21m4D5/Z33ZGtyf1zS\nL3jq3fbtwAqytblXRMTqAZ/5n2RNWbdKupNs7fWpA47ZTDbz7q1kiemeqt1vB96SmpTeBLwzlb8T\neHG65hpgPvBnwO2pOeuDwEeG+Cp2prp8HjgrlV0EtAKd6Xu5aIhzq+Me7vu8HOhI8b0Z+GXVqfcC\n50q6h2xq9EsHufxlKZbLge8DE9PxnyBrDjN7Cs9ubFYHqRnpvQMTYA0/fx7wnYgoczExG6d8x2Jm\nZoXyHYuGnANCAAAALUlEQVSZmRXKdyxmZlYoJxYzMyuUE4uZmRXKicXMzArlxGJmZoVyYjEzs0L9\nN9CcEb+WeNHxAAAAAElFTkSuQmCC\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x110fb7748>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "#plot9() # Be sure to comment out plot9() before submitting the assignment!"
    ]
