--- a/Assignment 3.ipynb
+++ b/Assignment 3.ipynb
@@ -992,56 +992,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Citable docs per Capita</th>\n",
-       "      <th>Energy Supply per Capita</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Citable docs per Capita</th>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.794001</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Energy Supply per Capita</th>\n",
-       "      <td>0.794001</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                          Citable docs per Capita  Energy Supply per Capita\n",
-       "Citable docs per Capita                  1.000000                  0.794001\n",
-       "Energy Supply per Capita                 0.794001                  1.000000"
+       "0.79400104354429446"
       ]
      },
-     "execution_count": 234,
+     "execution_count": 235,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1051,7 +1011,7 @@
     "    Top15 = answer_one()\n",
     "    Top15['PopEst'] = Top15['Energy Supply'] / Top15['Energy Supply per Capita']\n",
     "    Top15['Citable docs per Capita'] = Top15['Citable documents'] / Top15['PopEst']\n",
-    "    return Top15[['Citable docs per Capita', 'Energy Supply per Capita']].corr(method = 'pearson')\n",
+    "    return Top15['Citable docs per Capita'].corr(Top15['Energy Supply per Capita'])\n",
     "answer_nine()"
    ]
   },
