--- a/Assignment 3.ipynb
+++ b/Assignment 3.ipynb
@@ -954,16 +954,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "('United States', 317615384.61538464)"
+       "'United States'"
       ]
      },
-     "execution_count": 225,
+     "execution_count": 236,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -971,8 +971,8 @@
    "source": [
     "def answer_eight():\n",
     "    Top15 = answer_one()\n",
-    "    Top15['estimated population'] = Top15['Energy Supply']/Top15['Energy Supply per Capita']\n",
-    "    return (Top15['estimated population'].nlargest(3).index.tolist()[2], Top15['estimated population'].nlargest(3)[2])\n",
+    "    Top15['PopEst'] = Top15['Energy Supply'] / Top15['Energy Supply per Capita']\n",
+    "    return Top15['PopEst'].nlargest(3).index.tolist()[2]\n",
     "\n",
     "answer_eight()"
    ]
@@ -1073,6 +1073,7 @@
    "source": [
     "def answer_ten():\n",
     "    Top15 = answer_one()\n",
+    "    median_ren = Top15['% Renewable'].median()\n",
     "    return \"ANSWER\""
    ]
   },
