--- a/Assignment 3.ipynb
+++ b/Assignment 3.ipynb
@@ -729,14 +729,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 248,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "212"
+      ]
+     },
+     "execution_count": 248,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def answer_two():\n",
-    "    return \"ANSWER\""
+    "    return \"ANSWER TWO\""
    ]
   },
   {
@@ -1065,16 +1074,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 251,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Country\n",
+       "Australia                  NaN\n",
+       "Brazil                69.64803\n",
+       "Canada                61.94543\n",
+       "China                 19.75491\n",
+       "France                     NaN\n",
+       "Germany               17.90153\n",
+       "India                      NaN\n",
+       "Iran                       NaN\n",
+       "Italy                 33.66723\n",
+       "Japan                      NaN\n",
+       "South Korea                NaN\n",
+       "Russian Federation    17.28868\n",
+       "Spain                 37.96859\n",
+       "United Kingdom             NaN\n",
+       "United States              NaN\n",
+       "Name: % Renewable, dtype: float64"
+      ]
+     },
+     "execution_count": 251,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def answer_ten():\n",
     "    Top15 = answer_one()\n",
     "    median_ren = Top15['% Renewable'].median()\n",
-    "    return \"ANSWER\""
+    "    HighRenew = Top15['% Renewable'].where((Top15['% Renewable'] > median_ren))\n",
+    "   \n",
+    "    return HighRenew"
    ]
   },
   {
