--- a/Assignment 3.ipynb
+++ b/Assignment 3.ipynb
@@ -1143,15 +1143,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 276,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>size</th>\n",
+       "      <th>sum</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Continent</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Asia</th>\n",
+       "      <td>5</td>\n",
+       "      <td>2.898666e+09</td>\n",
+       "      <td>5.797333e+08</td>\n",
+       "      <td>6.790979e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Australia</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2.331602e+07</td>\n",
+       "      <td>2.331602e+07</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Europe</th>\n",
+       "      <td>6</td>\n",
+       "      <td>4.579297e+08</td>\n",
+       "      <td>7.632161e+07</td>\n",
+       "      <td>3.464767e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>North America</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3.528552e+08</td>\n",
+       "      <td>1.764276e+08</td>\n",
+       "      <td>1.996696e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>South America</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2.059153e+08</td>\n",
+       "      <td>2.059153e+08</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               size           sum          mean           std\n",
+       "Continent                                                    \n",
+       "Asia              5  2.898666e+09  5.797333e+08  6.790979e+08\n",
+       "Australia         1  2.331602e+07  2.331602e+07           NaN\n",
+       "Europe            6  4.579297e+08  7.632161e+07  3.464767e+07\n",
+       "North America     2  3.528552e+08  1.764276e+08  1.996696e+08\n",
+       "South America     1  2.059153e+08  2.059153e+08           NaN"
+      ]
+     },
+     "execution_count": 276,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def answer_eleven():\n",
     "    Top15 = answer_one()\n",
-    "    return \"ANSWER\""
+    "    ContinentDict  = {'China':'Asia', \n",
+    "                      'United States':'North America', \n",
+    "                      'Japan':'Asia', \n",
+    "                      'United Kingdom':'Europe', \n",
+    "                      'Russian Federation':'Europe', \n",
+    "                      'Canada':'North America', \n",
+    "                      'Germany':'Europe', \n",
+    "                      'India':'Asia',\n",
+    "                      'France':'Europe', \n",
+    "                      'South Korea':'Asia', \n",
+    "                      'Italy':'Europe', \n",
+    "                      'Spain':'Europe', \n",
+    "                      'Iran':'Asia',\n",
+    "                      'Australia':'Australia', \n",
+    "                      'Brazil':'South America'}\n",
+    "    Top15['size'] = None\n",
+    "    Top15['PopulationEst'] = Top15['Energy Supply'] / Top15['Energy Supply per Capita']\n",
+    "    for i in Top15.index.tolist():\n",
+    "        Top15.loc[i, 'Continent'] = ContinentDict[i]\n",
+    "    return Top15.groupby('Continent')['PopulationEst'].agg(['size', 'sum', 'mean','std'])\n",
+    "\n",
+    "answer_eleven()"
    ]
   },
   {
