--- a/Assignment 3.ipynb
+++ b/Assignment 3.ipynb
@@ -1274,16 +1274,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 282,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Continent      bins            \n",
+       "Asia           (2.212, 15.753]     4\n",
+       "               (15.753, 29.227]    1\n",
+       "Australia      (2.212, 15.753]     1\n",
+       "Europe         (2.212, 15.753]     1\n",
+       "               (15.753, 29.227]    3\n",
+       "               (29.227, 42.701]    2\n",
+       "North America  (2.212, 15.753]     1\n",
+       "               (56.174, 69.648]    1\n",
+       "South America  (56.174, 69.648]    1\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 282,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def answer_twelve():\n",
     "    Top15 = answer_one()\n",
-    "    return \"ANSWER\""
+    "    ContinentDict  = {'China':'Asia', \n",
+    "                      'United States':'North America', \n",
+    "                      'Japan':'Asia', \n",
+    "                      'United Kingdom':'Europe', \n",
+    "                      'Russian Federation':'Europe', \n",
+    "                      'Canada':'North America', \n",
+    "                      'Germany':'Europe', \n",
+    "                      'India':'Asia',\n",
+    "                      'France':'Europe', \n",
+    "                      'South Korea':'Asia', \n",
+    "                      'Italy':'Europe', \n",
+    "                      'Spain':'Europe', \n",
+    "                      'Iran':'Asia',\n",
+    "                      'Australia':'Australia', \n",
+    "                      'Brazil':'South America'}\n",
+    "    for i in Top15.index.tolist():\n",
+    "        Top15.loc[i, 'Continent'] = ContinentDict[i]\n",
+    "    Top15['bins'] = pd.cut(Top15['% Renewable'],5)\n",
+    "    return Top15.groupby(['Continent','bins']).size()\n",
+    "\n",
+    "answer_twelve()"
    ]
   },
   {
