--- a/Assignment 3.ipynb
+++ b/Assignment 3.ipynb
@@ -1340,16 +1340,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 288,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Country\n",
+       "Australia              23,316,017.316017315\n",
+       "Brazil                 205,915,254.23728815\n",
+       "Canada                  35,239,864.86486486\n",
+       "China                 1,367,645,161.2903225\n",
+       "France                  63,837,349.39759036\n",
+       "Germany                 80,369,696.96969697\n",
+       "India                 1,276,730,769.2307692\n",
+       "Iran                    77,075,630.25210084\n",
+       "Italy                  59,908,256.880733944\n",
+       "Japan                  127,409,395.97315437\n",
+       "South Korea            49,805,429.864253394\n",
+       "Russian Federation            143,500,000.0\n",
+       "Spain                    46,443,396.2264151\n",
+       "United Kingdom         63,870,967.741935484\n",
+       "United States          317,615,384.61538464\n",
+       "Name: PopEst, dtype: object"
+      ]
+     },
+     "execution_count": 288,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def answer_thirteen():\n",
     "    Top15 = answer_one()\n",
-    "    return \"ANSWER\""
+    "    Top15['PopEst'] = Top15['Energy Supply'] / Top15['Energy Supply per Capita']\n",
+    "    return Top15['PopEst'].apply(lambda x: '{:,}'.format(x))\n",
+    "\n",
+    "answer_thirteen()"
    ]
   },
   {
