used regex to parse text file and created dataframe of states and university towns using the list obtained from parsing text file

--- a/Assignment 4.ipynb
+++ b/Assignment 4.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -62,423 +62,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>State</th>\n",
-       "      <th>RegionName</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Auburn</td>\n",
-       "      <td>Alabama</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Florence</td>\n",
-       "      <td>Alabama</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Jacksonville</td>\n",
-       "      <td>Alabama</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Livingston</td>\n",
-       "      <td>Alabama</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Montevallo</td>\n",
-       "      <td>Alabama</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Troy</td>\n",
-       "      <td>Alabama</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Tuscaloosa</td>\n",
-       "      <td>Alabama</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Tuskegee</td>\n",
-       "      <td>Alabama</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Fairbanks</td>\n",
-       "      <td>Alaska</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Flagstaff</td>\n",
-       "      <td>Arizona</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>Tempe</td>\n",
-       "      <td>Arizona</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>Tucson</td>\n",
-       "      <td>Arizona</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>Arkadelphia</td>\n",
-       "      <td>Arkansas</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>Conway</td>\n",
-       "      <td>Arkansas</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>Fayetteville</td>\n",
-       "      <td>Arkansas</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>Jonesboro</td>\n",
-       "      <td>Arkansas</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>Magnolia</td>\n",
-       "      <td>Arkansas</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>Monticello</td>\n",
-       "      <td>Arkansas</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>Russellville</td>\n",
-       "      <td>Arkansas</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>Searcy</td>\n",
-       "      <td>Arkansas</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>Angwin</td>\n",
-       "      <td>California</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>Arcata</td>\n",
-       "      <td>California</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>Berkeley</td>\n",
-       "      <td>California</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>Chico</td>\n",
-       "      <td>California</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>Claremont</td>\n",
-       "      <td>California</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>Cotati</td>\n",
-       "      <td>California</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>Davis</td>\n",
-       "      <td>California</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>Irvine</td>\n",
-       "      <td>California</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>Isla</td>\n",
-       "      <td>California</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>University</td>\n",
-       "      <td>California</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>483</th>\n",
-       "      <td>Wise</td>\n",
-       "      <td>Virginia</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>484</th>\n",
-       "      <td>Chesapeake</td>\n",
-       "      <td>Virginia</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>485</th>\n",
-       "      <td>Bellingham</td>\n",
-       "      <td>Washington</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>486</th>\n",
-       "      <td>Cheney</td>\n",
-       "      <td>Washington</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>487</th>\n",
-       "      <td>Ellensburg</td>\n",
-       "      <td>Washington</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>488</th>\n",
-       "      <td>Pullman</td>\n",
-       "      <td>Washington</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>489</th>\n",
-       "      <td>University</td>\n",
-       "      <td>Washington</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>490</th>\n",
-       "      <td>Athens</td>\n",
-       "      <td>West</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>491</th>\n",
-       "      <td>Buckhannon</td>\n",
-       "      <td>West</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>492</th>\n",
-       "      <td>Fairmont</td>\n",
-       "      <td>West</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>493</th>\n",
-       "      <td>Glenville</td>\n",
-       "      <td>West</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>494</th>\n",
-       "      <td>Huntington</td>\n",
-       "      <td>West</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>495</th>\n",
-       "      <td>Montgomery</td>\n",
-       "      <td>West</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>496</th>\n",
-       "      <td>Morgantown</td>\n",
-       "      <td>West</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>497</th>\n",
-       "      <td>Shepherdstown</td>\n",
-       "      <td>West</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>498</th>\n",
-       "      <td>West</td>\n",
-       "      <td>West</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>499</th>\n",
-       "      <td>Appleton</td>\n",
-       "      <td>Wisconsin</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>500</th>\n",
-       "      <td>Eau</td>\n",
-       "      <td>Wisconsin</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>501</th>\n",
-       "      <td>Green</td>\n",
-       "      <td>Wisconsin</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>502</th>\n",
-       "      <td>La</td>\n",
-       "      <td>Wisconsin</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>503</th>\n",
-       "      <td>Madison</td>\n",
-       "      <td>Wisconsin</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>504</th>\n",
-       "      <td>Menomonie</td>\n",
-       "      <td>Wisconsin</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>505</th>\n",
-       "      <td>Milwaukee</td>\n",
-       "      <td>Wisconsin</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>506</th>\n",
-       "      <td>Oshkosh</td>\n",
-       "      <td>Wisconsin</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>507</th>\n",
-       "      <td>Platteville</td>\n",
-       "      <td>Wisconsin</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>508</th>\n",
-       "      <td>River</td>\n",
-       "      <td>Wisconsin</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>509</th>\n",
-       "      <td>Stevens</td>\n",
-       "      <td>Wisconsin</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>510</th>\n",
-       "      <td>Waukesha</td>\n",
-       "      <td>Wisconsin</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>511</th>\n",
-       "      <td>Whitewater</td>\n",
-       "      <td>Wisconsin</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>512</th>\n",
-       "      <td>Laramie</td>\n",
-       "      <td>Wyoming</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>513 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "             State  RegionName\n",
-       "0           Auburn     Alabama\n",
-       "1         Florence     Alabama\n",
-       "2     Jacksonville     Alabama\n",
-       "3       Livingston     Alabama\n",
-       "4       Montevallo     Alabama\n",
-       "5             Troy     Alabama\n",
-       "6       Tuscaloosa     Alabama\n",
-       "7         Tuskegee     Alabama\n",
-       "8        Fairbanks      Alaska\n",
-       "9        Flagstaff     Arizona\n",
-       "10           Tempe     Arizona\n",
-       "11          Tucson     Arizona\n",
-       "12     Arkadelphia    Arkansas\n",
-       "13          Conway    Arkansas\n",
-       "14    Fayetteville    Arkansas\n",
-       "15       Jonesboro    Arkansas\n",
-       "16        Magnolia    Arkansas\n",
-       "17      Monticello    Arkansas\n",
-       "18    Russellville    Arkansas\n",
-       "19          Searcy    Arkansas\n",
-       "20          Angwin  California\n",
-       "21          Arcata  California\n",
-       "22        Berkeley  California\n",
-       "23           Chico  California\n",
-       "24       Claremont  California\n",
-       "25          Cotati  California\n",
-       "26           Davis  California\n",
-       "27          Irvine  California\n",
-       "28            Isla  California\n",
-       "29      University  California\n",
-       "..             ...         ...\n",
-       "483           Wise    Virginia\n",
-       "484     Chesapeake    Virginia\n",
-       "485     Bellingham  Washington\n",
-       "486         Cheney  Washington\n",
-       "487     Ellensburg  Washington\n",
-       "488        Pullman  Washington\n",
-       "489     University  Washington\n",
-       "490         Athens        West\n",
-       "491     Buckhannon        West\n",
-       "492       Fairmont        West\n",
-       "493      Glenville        West\n",
-       "494     Huntington        West\n",
-       "495     Montgomery        West\n",
-       "496     Morgantown        West\n",
-       "497  Shepherdstown        West\n",
-       "498           West        West\n",
-       "499       Appleton   Wisconsin\n",
-       "500            Eau   Wisconsin\n",
-       "501          Green   Wisconsin\n",
-       "502             La   Wisconsin\n",
-       "503        Madison   Wisconsin\n",
-       "504      Menomonie   Wisconsin\n",
-       "505      Milwaukee   Wisconsin\n",
-       "506        Oshkosh   Wisconsin\n",
-       "507    Platteville   Wisconsin\n",
-       "508          River   Wisconsin\n",
-       "509        Stevens   Wisconsin\n",
-       "510       Waukesha   Wisconsin\n",
-       "511     Whitewater   Wisconsin\n",
-       "512        Laramie     Wyoming\n",
-       "\n",
-       "[513 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def parse_university_text_file():\n",
-    "    pattern_town_name = r\"\\(\"\n",
-    "    pattern_place_name = r\"^[^(\\s\\(|\\[)]+\"\n",
+    "    pattern_state_name = r\"\\[edit\\]\"\n",
+    "    pattern_place_name = r\"^[^\\(\\[]+\"#r\"^[^(\\s\\(|\\[)]+\"\n",
     "    \n",
-    "    town_name = re.compile(pattern_town_name)\n",
+    "    state_name = re.compile(pattern_state_name)\n",
     "    place_name = re.compile(pattern_place_name)\n",
     "    \n",
     "    univeristy_towns = []\n",
@@ -487,11 +79,12 @@
     "        lines = file.readlines() \n",
     "\n",
     "    for line in lines:\n",
-    "        if town_name.search(line) is None:\n",
+    "        if state_name.search(line):\n",
     "            curr_state = place_name.match(line).group(0)\n",
+    "            #print(curr_state)\n",
     "        else:\n",
-    "            curr_town = place_name.match(line).group(0)\n",
-    "            univeristy_towns.append([curr_town, curr_state])\n",
+    "            curr_town = place_name.match(line).group(0).strip()\n",
+    "            univeristy_towns.append([curr_state, curr_town])\n",
     "    return univeristy_towns\n",
     "    \n",
     "def get_list_of_university_towns():\n",
@@ -509,9 +102,8 @@
     "    list_of_university_towns = parse_university_text_file()\n",
     "    \n",
     "    df = pd.DataFrame(list_of_university_towns, columns = ['State','RegionName'])\n",
-    "    return df\n",
-    "\n",
-    "#get_list_of_university_towns()"
+    "    \n",
+    "    return df"
    ]
   },
   {
