found start date of recession bit applying bit mask to gdp data

--- a/Assignment 4.ipynb
+++ b/Assignment 4.ipynb
@@ -68,7 +68,7 @@
    "source": [
     "def parse_university_text_file():\n",
     "    pattern_state_name = r\"\\[edit\\]\"\n",
-    "    pattern_place_name = r\"^[^\\(\\[]+\"#r\"^[^(\\s\\(|\\[)]+\"\n",
+    "    pattern_place_name = r\"^[^\\(\\[]+\"\n",
     "    \n",
     "    state_name = re.compile(pattern_state_name)\n",
     "    place_name = re.compile(pattern_place_name)\n",
@@ -108,17 +108,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2008q3'"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def get_recession_start():\n",
     "    '''Returns the year and quarter of the recession start time as a \n",
     "    string value in a format such as 2005q3'''\n",
-    "    \n",
-    "    return \"ANSWER\""
+    "    df = pd.read_excel('gdplev.xls', skiprows = 219, parse_cols=[4,6])\n",
+    "    df.columns= ['Quarter','GDP']\n",
+    "    df['diff'] = df['GDP'].diff()\n",
+    "    df['gdp_b'] = np.where(df['diff'] > 0, '1', '0')\n",
+    "    gdp_data = \"\".join(df['gdp_b'].values)\n",
+    "    ind = gdp_data.index(\"0011\")\n",
+    "    index_start_of_recession = gdp_data.rindex(\"1\", 0, ind) + 1\n",
+    "    return df.iloc[index_start_of_recession].Quarter\n",
+    "get_recession_start()"
    ]
   },
   {
@@ -132,7 +148,13 @@
     "def get_recession_end():\n",
     "    '''Returns the year and quarter of the recession end time as a \n",
     "    string value in a format such as 2005q3'''\n",
-    "       \n",
+    "        df = pd.read_excel('gdplev.xls', skiprows = 219, parse_cols=[4,6])\n",
+    "    df.columns= ['Quarter','GDP']\n",
+    "    df['diff'] = df['GDP'].diff()\n",
+    "    df['gdp_b'] = np.where(df['diff'] > 0, '1', '0')\n",
+    "    gdp_data = \"\".join(df['gdp_b'].values)\n",
+    "    ind = gdp_data.index(\"0011\")\n",
+    "    index_end_of_recession = gdp_data.rindex(\"1\", 0, ind) + 1   \n",
     "    return \"ANSWER\""
    ]
   },
