--- a/Assignment 4.ipynb
+++ b/Assignment 4.ipynb
@@ -139,23 +139,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2009q4'"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def get_recession_end():\n",
     "    '''Returns the year and quarter of the recession end time as a \n",
     "    string value in a format such as 2005q3'''\n",
-    "        df = pd.read_excel('gdplev.xls', skiprows = 219, parse_cols=[4,6])\n",
+    "    df = pd.read_excel('gdplev.xls', skiprows = 219, parse_cols=[4,6])\n",
     "    df.columns= ['Quarter','GDP']\n",
     "    df['diff'] = df['GDP'].diff()\n",
     "    df['gdp_b'] = np.where(df['diff'] > 0, '1', '0')\n",
     "    gdp_data = \"\".join(df['gdp_b'].values)\n",
     "    ind = gdp_data.index(\"0011\")\n",
-    "    index_end_of_recession = gdp_data.rindex(\"1\", 0, ind) + 1   \n",
-    "    return \"ANSWER\""
+    "    index_end_of_recession = ind + len(\"0011\") - 1\n",
+    "    return df.iloc[index_end_of_recession].Quarter\n",
+    "get_recession_end()"
    ]
   },
   {
