found bottom date of recession

--- a/Assignment 4.ipynb
+++ b/Assignment 4.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 52,
    "metadata": {
     "collapsed": true
    },
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 53,
    "metadata": {
     "collapsed": true
    },
@@ -62,8 +62,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": 54,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def parse_university_text_file():\n",
@@ -108,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +119,7 @@
        "'2008q3'"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +150,7 @@
        "'2009q4'"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,17 +172,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2009q2'"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def get_recession_bottom():\n",
     "    '''Returns the year and quarter of the recession bottom time as a \n",
     "    string value in a format such as 2005q3'''\n",
-    "    \n",
-    "    return \"ANSWER\""
+    "    df = pd.read_excel('gdplev.xls', skiprows = 219, parse_cols=[4,6])\n",
+    "    df.columns= ['Quarter','GDP']\n",
+    "    start_index = df[df['Quarter'] == get_recession_start()].index.tolist()[0]\n",
+    "    end_index = df[df['Quarter'] == get_recession_end()].index.tolist()[0]\n",
+    "    lowest_gdp_in_recession = df['GDP'].loc[start_index : end_index + 1].min()\n",
+    "    lowest_gdp_in_recession_index = df[df['GDP'] == lowest_gdp_in_recession].index.tolist()[0]\n",
+    "    return df.iloc[lowest_gdp_in_recession_index].Quarter\n",
+    "\n",
+    "get_recession_bottom()"
    ]
   },
   {
